gcc/testsuite/rust/rustc/ui/issues/issue-48364.rs
fn foo() -> bool {
    b"".starts_with(stringify!(foo))
// { dg-error ".E0308." "" { target *-*-* } .-1 }
}

fn main() {}

